--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "nebula-mock",
-  "version": "0.0.1",
-  "description": "Mock server base on nebulajs.",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "keywords": [
-    "node.js",
-    "javascript",
-    "mock"
-  ],
-  "author": {
-    "name": "DaniloShan",
-    "email": "awpszq@gmail.com"
-  },
-  "license": "MIT",
-  "engines": {
-    "node": ">= 0.9"
-  }
+    "name": "nebula-mock",
+    "version": "0.0.2",
+    "description": "Mock server base on nebulajs.",
+    "main": "index.js",
+    "scripts": {
+	"test": "mocha"
+    },
+    "keywords": [
+	"node.js",
+	"javascript",
+	"mock"
+    ],
+    "author": {
+	"name": "DaniloShan",
+	"email": "awpszq@gmail.com"
+    },
+    "license": "MIT",
+    "engines": {
+	"node": ">= 0.9"
+    },
+    "homepage": "https://github.com/DaniloShan/Nebula-Mock",
+    "repository": {
+	"type": "git",
+	"url": "https://github.com/DaniloShan/Nebula-Mock.git"
+    },
+    "bugs": {
+	"url": "https://github.com/DaniloShan/Nebula-Mock/issues"
+    }
 }
