--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-    "name": "nebula-mock",
-    "version": "0.0.2",
-    "description": "Mock server base on nebulajs.",
-    "main": "index.js",
-    "scripts": {
-	"test": "mocha"
-    },
-    "keywords": [
-	"node.js",
-	"javascript",
-	"mock"
-    ],
-    "author": {
-	"name": "DaniloShan",
-	"email": "awpszq@gmail.com"
-    },
-    "license": "MIT",
-    "engines": {
-	"node": ">= 0.9"
-    },
-    "homepage": "https://github.com/DaniloShan/Nebula-Mock",
-    "repository": {
-	"type": "git",
-	"url": "https://github.com/DaniloShan/Nebula-Mock.git"
-    },
-    "bugs": {
-	"url": "https://github.com/DaniloShan/Nebula-Mock/issues"
-    }
+  "name": "gulp-mock",
+  "version": "0.0.2",
+  "description": "Just mock data for test.",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "keywords": [
+    "node.js",
+    "javascript",
+    "mock",
+    "gulp"
+  ],
+  "author": {
+    "name": "DaniloShan",
+    "email": "awpszq@gmail.com"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">= 0.9"
+  },
+  "homepage": "https://github.com/DaniloShan/Nebula-Mock",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DaniloShan/Nebula-Mock.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DaniloShan/Nebula-Mock/issues"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-util": "^3.0.2",
+    "through2": "^0.6.3"
+  }
 }
