--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-util": "^3.0.2",
     "lodash": "^2.4.1",
     "moment": "^2.9.0",
+    "should": "^4.6.1",
     "through2": "^0.6.3"
   }
 }
